--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/storage": "^2.3.1",
+    "admin-lte": "^3.0.5",
+    "ol": "^6.4.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
