--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
     "admin-lte": "^3.0.5",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
+    "ng2-charts": "^2.4.1",
     "ol": "^6.4.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
