clean qr registration and printing

--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.3.1",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
     "admin-lte": "^3.0.5",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "cordova-plugin-qrscanner": "^3.0.1",
     "jsqr": "^1.3.1",
     "ng2-charts": "^2.4.1",
-    "ngx-qrcode2": "^9.0.0",
     "ngx-socket-io": "^3.2.0",
     "ol": "^6.4.3",
     "phonegap-plugin-barcodescanner": "^8.1.0",
