--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/core": "2.4.0",
     "@ionic-native/barcode-scanner": "^5.28.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/network": "^5.28.0",
     "@ionic-native/qr-scanner": "^5.28.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -49,10 +50,12 @@
     "@angular/language-service": "~10.0.0",
     "@capacitor/cli": "2.4.0",
     "@ionic/angular-toolkit": "^2.3.0",
+    "@ionic/lab": "3.2.9",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cordova-android": "^9.0.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -84,7 +87,8 @@
       "phonegap-plugin-barcodescanner": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
