--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@capacitor/core": "2.4.0",
-    "@ionic-native/barcode-scanner": "^5.28.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/network": "^5.28.0",
     "@ionic-native/qr-scanner": "^5.28.0",
@@ -34,10 +33,10 @@
     "chartjs-plugin-datalabels": "^0.7.0",
     "cordova-plugin-qrscanner": "^3.0.1",
     "jsqr": "^1.3.1",
+    "moment": "^2.29.1",
     "ng2-charts": "^2.4.1",
     "ngx-socket-io": "^3.2.0",
     "ol": "^6.4.3",
-    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -63,6 +62,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^5.1.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -84,7 +84,7 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "phonegap-plugin-barcodescanner": {}
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "browser",
