--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.0.0",
     "@angular/service-worker": "~10.0.0",
     "@capacitor/core": "2.4.0",
+    "@ionic-native/app-version": "^5.28.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/network": "^5.28.0",
     "@ionic-native/qr-scanner": "^5.28.0",
@@ -57,6 +58,7 @@
     "codelyzer": "^6.0.0",
     "cordova-android": "^9.0.0",
     "cordova-browser": "^6.0.0",
+    "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
@@ -85,7 +87,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-app-version": {}
     },
     "platforms": [
       "browser",
