--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "com.tagabukid.wall",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "version": "1.022",
+  "author": "RUFINO JOHN AGUILAR",
+  "homepage": "https://covid19.bukidnon.gov.ph/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,7 +21,6 @@
     "@angular/router": "~10.0.0",
     "@angular/service-worker": "~10.0.0",
     "@capacitor/core": "2.4.0",
-    "@ionic-native/app-version": "^5.28.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/network": "^5.28.0",
     "@ionic-native/qr-scanner": "^5.28.0",
@@ -58,7 +57,6 @@
     "codelyzer": "^6.0.0",
     "cordova-android": "^9.0.0",
     "cordova-browser": "^6.0.0",
-    "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
@@ -87,8 +85,7 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {},
-      "cordova-plugin-app-version": {}
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "browser",
