--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsqr": "^1.3.1",
     "moment": "^2.29.1",
     "ng2-charts": "^2.4.1",
+    "ngtweet": "^1.0.0",
     "ngx-socket-io": "^3.2.0",
     "ol": "^6.4.3",
     "rxjs": "~6.5.5",
