--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~10.0.0",
     "@angular/service-worker": "~10.0.0",
     "@capacitor/core": "2.4.0",
+    "@ionic-native/aes-256": "^4.20.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/network": "^5.28.0",
     "@ionic-native/qr-scanner": "^5.28.0",
@@ -34,6 +35,7 @@
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "cordova-plugin-qrscanner": "^3.0.1",
+    "crypto-js": "^4.0.0",
     "firebase": "^7.13.1",
     "jsqr": "^1.3.1",
     "moment": "^2.29.1",
@@ -47,7 +49,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": ">= 0.900 < 0.1100",
-    "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/cli": "~10.0.5",
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
