--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@angular/service-worker": "~10.0.0",
     "@capacitor/core": "2.4.0",
     "@ionic-native/aes-256": "^4.20.0",
+    "@ionic-native/camera": "^5.29.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/network": "^5.28.0",
     "@ionic-native/qr-scanner": "^5.28.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/pwa-elements": "^3.0.1",
     "@ionic/storage": "^2.3.1",
     "@techiediaries/ngx-qrcode": "^9.1.0",
     "admin-lte": "^3.0.5",
@@ -59,12 +61,10 @@
     "@ionic/lab": "3.2.9",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -93,7 +93,6 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-sqlite-storage": {}
     },
