--- a/angular.json
+++ b/angular.json
@@ -94,10 +94,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "app:build",
-            "ssl": true,
-            "sslCert": "./ssl/cert.pem",
-            "sslKey": "./ssl/key.pem"
+            "browserTarget": "app:build"
           },
           "configurations": {
             "production": {
