--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/angular": "^5.0.0",
     "@ionic/pwa-elements": "^3.0.1",
     "@ionic/storage": "^2.3.1",
+    "@swimlane/ngx-datatable": "^19.0.0",
     "@techiediaries/ngx-qrcode": "^9.1.0",
     "admin-lte": "^3.0.5",
     "chart.js": "^2.9.4",
